--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --radius: 0.25rem;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #6b6b6b;
+}
+
+input {
+  font: inherit;
+}
+
+.section {
+  padding: 3rem 0;
+}
+
+.section-title {
+  text-align: center;
+}
+
+.section-center {
+  width: 90vw;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.filter {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 1rem;
+}
+.filter input {
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 500px;
+  border-radius: var(--radius);
+  border: 1px solid gray;
+}
+
+.posts {
+  display: grid;
+  gap: 2rem;
+}
+
+.post {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.5rem;
+}
+
+.post p {
+  grid-column: 2/-1;
+}
+
+.number {
+  background-color: lightgreen;
+  align-self: start;
+  padding: 1rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  font-weight: bold;
+  display: grid;
+  place-content: center;
+}
+
+.btn {
+  text-decoration: none;
+  font-size: inherit;
+  padding: 0.25rem 0.5rem;
+  background-color: yellowgreen;
+  border: none;
+  border-radius: var(--radius);
+  cursor: pointer;
+  color: aliceblue;
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 2rem;
+}
+
+.loading {
+  text-align: center;
+  margin: 2rem;
+  font-weight: bold;
 }
